Zelenium Product Changelog

  After Zelenium-0.4.1

    - Make ZIPfile generation work with nested suites.

  Zelenium-0.4.1 (2005/05/02)

    - CVS tag:  'Zelenium-0_4_1'

    - Repair breakage of ExternalEditor link in 'manage_main'.

    - Compensate in display of test tables for non-padded integers
      in the IDs (make them sort properly).

  Zelenium-0.4 (2005/04/27)

    - CVS tag:  'Zelenium-0_4'
 
    - Make Zuite instances recursively include their Zuite children's
      test cases (to allow easier organization of the test cases in a
      hierarchy).

    - Allow indiviual zuites to override the list of metatypes which
      can be test cases, via a new 'testcase_metatypes' property.

    - Force Zuite objects to show order support, even in the presence of
      ExternalEditor, whose monkey patching seems to trip it up.  Surface
      the EE icon, if the product is available

      Note:  we are *forking* OFS/dtml/main.dtml and the version in
      ExteranalEditor/manage_main.dtml to surface order support, which
      is a pretty brutal hack.  We should probably get ExteranalEditor
      fixed, instead, and rip out the forked copy.

  Zelenium-0.3.1 (2005/04/26)

    - CVS tag:  'Zelenium-0_3_1'

    - Record server-side data during 'postResults':  Zope version string,
      product names and versions.

    - Captured additional request parameters in 'postResults':  user agent,
      HTTP host, remote address).

  Zelenium-0.3 (2005/04/25)

    - CVS tag:  'Zelenium-0_3'

    - Added 'postResults' handling code to capture results as a sub-
      folder of the suite.

  Zelenium-0.2.1 (2005/04/21)

    - CVS tag:  'Zelenium-0_2_1'

    - Correct the emitted HTML for input widgets (close the <tr> tag).

    - Fix unpack bug in code which punts on requests to "foreign" hosts.

    - Punt on handling XML-RPC requests (e.g., Epoz calls back to the
      server to run Tidy).

  Zelenium-0.2 (2005/04/20)

    - CVS tag:  'Zelenium-0_2'
