@@ -2,6 +2,8 @@ Zelenium Product Changelog
 
   After Zelenium-0.4.1
 
+    - Add unit tests for Zuite class.
+
     - Make ZIPfile generation work with nested suites.
 
   Zelenium-0.4.1 (2005/05/02)
